# cosipy

./: .buildinfo  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: unit_tests.yml  unit_tests_ml.yml
_modules/: index.html
_static/: documentation_options.js
api/: data_io.html  image_deconvolution.html  index.html  polarization.html  response.html  source_injector.html  spacecraftfile.html  threeml.html  ts_map.html  util.html
cosipy/: __init__.py
cosipy/background_estimation/: ContinuumEstimation.py  LineBackgroundEstimation.py  __init__.py  free_norm_threeml_binned_bkg.py
cosipy/data_io/: BinnedData.py  EmCDSUnbinnedData.py  ReadTraTest.py  UnBinnedData.py  __init__.py
cosipy/event_selection/: __init__.py  chain_selector.py  good_time_interval.py  gti_event_selection.py  multi_time_selection.py  time_selection.py
cosipy/image_deconvolution/: MAP_RichardsonLucy.py  RLparallelscript.py  ResponseWeightingFilter.py  RichardsonLucy.py  RichardsonLucyAdvanced.py  RichardsonLucyBasic.py  RichardsonLucySimple.py  __init__.py  accelerator_base.py  allskyimage.py  constants.py  coordsys_conversion_matrix.py  dataIF_COSI_DC2.py  dataIF_COSI_DC2_gpu.py  dataIF_Parallel.py  data_interface_collection.py  data_loader_DC2_gpu.py  deconvolution_algorithm_base.py  exposure_table.py  exposure_table_base.py  image_deconvolution.py  image_deconvolution_data_interface_base.py  max_step_accelerator.py  model_base.py  prior_base.py  prior_entropy.py  prior_tsv.py  scatt_exposure_table.py  time_binned_exposure_table.py  utils.py
cosipy/interfaces/: __init__.py  background_interface.py  data_interface.py  event.py  event_data_processor_interface.py  event_selection.py  expectation_interface.py  instrument_response_interface.py  likelihood_interface.py  measurements.py  photon_list.py  photon_parameters.py  source_response_interface.py  threeml_plugin_interface.py
cosipy/polarization/: __init__.py  conventions.py  polarization_angle.py  polarization_asad.py  polarization_axis.py  polarization_stokes.py
cosipy/polarization_fitting/: __init__.py  polarization_asad.py  polarization_stokes.py
cosipy/response/: ExtendedSourceResponse.py  FullDetectorResponse.py  GalacticResponse.py  PointSourceResponse.py  RspConverter.py  __init__.py  functions.py  functions_3d.py  ideal_response.py  instrument_response.py  instrument_response_function.py  integrals.py  photon_types.py  relative_coordinates.py  rsp_to_arf_rmf.py  threeml_extended_source_response.py  threeml_response.py  (+1 more)
dev/: index.html  unit_tests.html
docs/: conf.py  install.rst
tutorials/: index.html  other_examples.html
(+228 files in other folders)
