[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "cosipy"
version = "0.4.0dev0"
authors = [
          { name = "COSI Team", email = "imc@umd.edu" }
          ]
description = "High-level analysis for the COSI telescope data"
requires-python = ">=3.11"
dependencies = [
                  "histpy>=2.0.5",
                  "h5py",
                  "hdf5plugin",
                  "mhealpy",
                  "scoords",
                  "astromodels>=2.5.1",
                  "threeml @ git+https://github.com/threeML/threeML.git@dev",
                  "matplotlib<=3.8.3",
                  "numba",
                  "astropy>5.0",
                  "yayc",
                  "awscli",
                  "boto3",
                  "scipy<=1.13.0",
                  "pytest (>=9.0.2,<10.0.0)",
               ]

[project.optional-dependencies]
# Machine learning stuff
ML = ["torch", "torch_geometric"]

[project.urls]
Homepage = "https://github.com/cositools/cosipy"

[project.scripts]
cosi-response = "cosipy.response.FullDetectorResponse:cosi_response"
cosi-threemlfit = "cosipy.pipeline.task.task:cosi_threemlfit"
cosi-bindata = "cosipy.pipeline.task.task:cosi_bindata"

[tool.setuptools.packages.find]
include = ["cosipy", "cosipy.*"]
